--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <img id="isCanvasImg" height="1000" width="750" src="cubes.png" alt="photo of ices">
+    <img id="isCanvasImg" height="1000" width="750" src="photos/cubes.png" alt="photo of ices">
     <canvas id="canvas" width="2000" height="2000"></canvas>
     <div id="Scorediv">10</div>
     
     <button id="myButton">
-        <img src="retry.png" alt="Button Image" id="imagebutton">
+        <img src="photos/retry.png" alt="Button Image" id="imagebutton">
     </button>
     <script src="script.js"></script>
 </body>
