--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-        <img id="isCanvasImg" height="1000" width="750" src="photos/cubes.png" alt="photo of ices">
+    <canvas id="canvas1" width="1900" height="1300"></canvas>
     <canvas id="canvas" width="2000" height="2000"></canvas>
-    <div id="Scorediv">10</div>
-    
+    <div id="Scorediv">50</div>
+    <div id="Coindiv">1/1</div>
     <button id="myButton">
         <img src="photos/retry.png" alt="Button Image" id="imagebutton">
     </button>
