modificy the game

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
     <canvas id="canvas1" width="1900" height="1300"></canvas>
     <canvas id="canvas" width="2000" height="2000"></canvas>
-    <div id="Scorediv">50</div>
-    <div id="Coindiv">1/1</div>
+    <div id="Timediv"></div>
+    <div id="Scorediv"></div>
+    <div id="Coindiv"></div>
     <button id="myButton">
         <img src="photos/retry.png" alt="Button Image" id="imagebutton">
+    </button>
+    <button id="myButtonBomb">
+        <img src="photos/bomb.png" alt="Button Image" id="imagebutton">
+    </button>
+    <button id="myButtonDel">
+        <img src="photos/delete.png" alt="Button Image" id="imagebutton">
     </button>
     <script src="script.js"></script>
 </body>
